[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/main_UI_v2.jpg" type="Texture" id=1]
[ext_resource path="res://Music_Sound/mainUI.wav" type="AudioStream" id=2]
[ext_resource path="res://UI/Start_Menu.gd" type="Script" id=3]
[ext_resource path="res://UI/Main_Exit.jpg" type="Texture" id=4]
[ext_resource path="res://UI/Main_Play.jpg" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 5 ), ExtResource( 4 ) ],
"loop": true,
"name": "main",
"speed": 1.0
} ]

[node name="Start_Menu" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -13.483
autoplay = true

[node name="Play" type="Button" parent="."]
margin_left = 618.0
margin_top = 326.0
margin_right = 762.0
margin_bottom = 377.0
keep_pressed_outside = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="."]
margin_left = 618.0
margin_top = 417.0
margin_right = 760.0
margin_bottom = 466.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 480.685, 270.164 )
scale = Vector2( 0.255522, 0.256114 )
frames = SubResource( 1 )
animation = "main"

[node name="ClearGameData" type="Button" parent="."]
margin_left = 831.0
margin_top = 512.5
margin_right = 950.0
margin_bottom = 532.5
text = "Clear Game Data"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PvP Mode (dev)" type="Button" parent="."]
margin_left = 832.0
margin_top = 480.0
margin_right = 951.0
margin_bottom = 500.0
text = "PvP Mode (dev)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="version" type="Label" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 145.0
margin_bottom = 18.0
text = "Ver 1.0.11.0722_alpha"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="Play" to="." method="_on_Play_mouse_entered"]
[connection signal="mouse_exited" from="Play" to="." method="_on_Play_mouse_exited"]
[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="mouse_entered" from="Exit" to="." method="_on_Exit_mouse_entered"]
[connection signal="mouse_exited" from="Exit" to="." method="_on_Exit_mouse_exited"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="ClearGameData" to="." method="_on_ClearGameData_pressed"]
[connection signal="pressed" from="PvP Mode (dev)" to="." method="_on_PvP_Mode_dev_pressed"]
